# adani

./: .clang-format  .gitattributes  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakeLists_old.txt  README.md  compilelib.sh  conanfile.py  format.sh  mylib.sh  pyproject.toml  setup.py
.github/workflows/: conan.yml  pip.yml  tests.yml
adani.egg-info/: PKG-INFO  SOURCES.txt
docs/: approximation_smallx_nll.tex  montecarlointegration.tex
examples/: CmakeLists.txt  compile_test.txt  conanfile.py  test.cpp  test.py
extras/: F2_highenergy.nb  F2_highenergy__simplification.nb  FL_highenergy.nb  grid_x.cpp  x_NEW.txt
extras/damp/: damptest.cpp  damptest.sh
extras/damp_FL/: damptest.gnp
extras/mu_dep_parts/: CM_32NEW.cpp  Cm_21.cpp  Cm_31.cpp  Cm_31.sh  Cm_32.cpp  Cm_32.sh  analytical_convolutions.nb  c2_21.cpp  mu_dep_parts.nb
inc/adani/: ApproximateCoefficientFunction.h  ApproximateCoefficientFunctions.h  AsymptoticCoefficientFunction.h  AsymptoticCoefficientFunctions.h  CoefficientFunction.h  ColorFactors.h  CommonTypes.h  Constants.h  Convolution.h  Convolutions.h  ExactCoefficientFunction.h  ExactCoefficientFunctions.h  Exceptions.h  HighEnergyCoefficientFunction.h  HighEnergyCoefficientFunctions.h  HighScaleCoefficientFunction.h  HighScaleCoefficientFunctions.h  HighScaleSplitLogs.h  MassiveCoefficientFunctions.h  MasslessCoefficientFunction.h  MasslessCoefficientFunctions.h  MatchingCondition.h  MatchingConditions.h  PowerTermsCoefficientFunction.h  SpecialFunctions.h  SplittingFunction.h  SplittingFunctions.h  ThresholdCoefficientFunction.h  ThresholdCoefficientFunctions.h  Value.h  _version.py  adani.h  version.h.in
inc/masterthesis/: ApproximateCoefficientFunctions.h  AsymptoticCoefficientFunctions.h  ColorFactors.h  Convolutions.h  HighEnergyCoefficientFunctions.h  HighScaleCoefficientFunctions.h  MassiveCoefficientFunctions.h  MasslessCoefficientFunctions.h  MatchingConditions.h  SpecialFunctions.h  SplittingFunctions.h  ThresholdCoefficientFunctions.h  version.h.in
inc/oldadani/: ApproximateCoefficientFunctions.h  AsymptoticCoefficientFunctions.h  Constants.h  HighScaleSplitLogs.h  MatchingConditions.h  SplittingFunctions.h  ThresholdCoefficientFunctions.h  __init__.py  _version.py  oldadani.h
include/: ApproximateCoefficientFunctions.h  AsymptoticCoefficientFunctions.h  ColorFactors.h  Combination.h  Convolutions.h  HighEnergyCoefficientFunctions.h  HighScaleCoefficientFunctions.h  MassiveCoefficientFunctions.h  MasslessCoefficientFunctions.h  MatchingConditions.h  MyLib.h  SpecialFunctions.h  SplittingFunctions.h  ThresholdCoefficientFunctions.h
mu_dep_parts/: c2_21.cpp  mu_dep_parts.nb
old/: HighScaleCoefficientFunction.cc  MasslessCoefficientFunction.cc
output/: Q.txt  output_grid.cpp  output_grid.py  output_grid.sh  runcard.yaml  x.txt  x_NEW.txt
output/runcards/: runcard_2g.yaml  runcard_2g_down.yaml  runcard_2g_up.yaml  runcard_2q.yaml  runcard_2q_down.yaml  runcard_2q_up.yaml  runcard_Lg.yaml  runcard_Lg_down.yaml  runcard_Lg_up.yaml  runcard_Lq.yaml  runcard_Lq_down.yaml  runcard_Lq_up.yaml
pywrap/: pywrap.cc
src/: AQg3mod.f90  AQg3red.f  ApproximateCoefficientFunction.cc  ApproximateCoefficientFunctions.cc  AsymptoticCoefficientFunction.cc  AsymptoticCoefficientFunctions.cc  CoefficientFunction.cc  Combination.cc  CommonTypes.cc  Convolution.cc  Convolutions.cc  ExactCoefficientFunction.cc  ExactCoefficientFunctions.cc  Exceptions.cc  HighEnergyCoefficientFunction.cc  HighEnergyCoefficientFunctions.cc  HighScaleCoefficientFunction.cc  HighScaleCoefficientFunctions.cc  HighScaleSplitLogs.cc  MassiveCoefficientFunctions.cc  MasslessCoefficientFunction.cc  MasslessCoefficientFunctions.cc  MatchingCondition.cc  MatchingConditions.cc  PowerTermsCoefficientFunction.cc  SpecialFunctions.cc  SplittingFunction.cc  SplittingFunctions.cc  ThresholdCoefficientFunction.cc  ThresholdCoefficientFunctions.cc  Value.cc  cgt2.f  hplog.f  hqcoef.f
src/adani.egg-info/: SOURCES.txt
test/: approxN2LO.cpp  approxN2LO.gnp  approxN2LO.sh  approxN3LO.cpp  approxN3LO.gnp  approxN3LO.sh
tests/: test_approx_coeff_func.py  test_asy.py  test_coeff_func.py  test_exact_coeff_func.py  test_high_scale.py  test_highenergy.py  test_massless.py  test_mc_integral.py  test_rescaled.py  test_splitlogs.py  test_splitting_functions.py  test_threshold.py
