[build-system]
requires = [
    "setuptools>=42",
    "pybind11>=2.9.2",
    "cmake>=3.22",
    "scikit-build>=0.15.0",
    "versioneer==0.29"
]
build-backend = "setuptools.build_meta"

[tool.versioneer]
VCS = "git"
style = "pep440"
versionfile_source = "inc/oldadani/_version.py"
versionfile_build = "oldadani/_version.py"
tag_prefix = "v"
parentdir_prefix = "oldadani-"
